# ScratchC

./: .gitignore  .gitmodules  CMakeLists.txt  bootstrap.sh  vcpkg.json
include/: Benchmark.hh  Printing.hh  Scratch.hh  Statistics.hh  StringList.hh  Util.hh
project-bin/: CMakeLists.txt
project-bin/src/: main.cc
project-lib/: CMakeLists.txt
project-lib/include/: hello-world.hh
project-lib/src/: hello-world.cc
project-lib/tests/: CMakeLists.txt
project-lib/tests/src/: hello-world.cc
scratch/: CMakeLists.txt
scratch-challenge/: CMakeLists.txt
scratch-challenge/src/: nth_primes.cc  nth_primes.hh  prime_sieve.cc  prime_sieve.hh
scratch-util/: CMakeLists.txt
scratch-util/benchmarks/: CMakeLists.txt
scratch-util/include/: Lifetime.hh  Printing.hh  Statistics.hh  StringList.hh
scratch-util/include/util/: core.hh  lifetime.hh  logging.hh  statistics.hh  stringlist.hh
scratch-util/include/util/math/: integer.hh  prime_sieve.hh
scratch-util/include/util/stringlist/: format.hh  ostream.hh  stl.hh
scratch-util/tests/: CMakeLists.txt
scratch-util/tests/src/: statistics.cc  stringlist.cc  stringlist_ostream.cc  stringlist_stl.cc
scratch/include/: Scratch.hh
src/: main.cc
